更新依赖版本，更新Material到3

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 kotlin.version=1.6.21
-android.tool.version=7.2.1
-compose.version=1.2.0-beta01
+android.tool.version=7.4.0-alpha08
+compose.version=1.2.0-rc01
 logback.version=1.2.3
 ksp.version = 1.6.21-1.0.5
